# photo-organizer

./: .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  README.md  biome.jsonc  bun.lockb  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
electron/: bridge.ts  main.ts
public/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AppJoyride.tsx  BasicControls.tsx  FooterBar.tsx  Header.tsx  ImageCountInput.tsx  ImagePreview.tsx  InputPath.tsx  KeybindPreview.tsx  KeybindsDisplay.tsx  QuickSettingsDisplay.tsx  SettingItem.tsx  SideButton.tsx  Switch.tsx  SwitchLabeled.tsx
src/components/AppJoyride/: index.tsx
src/components/BasicControls/: index.tsx  styles.ts
src/components/Header/: index.tsx  styles.ts
src/constants/: imagePlaceholder.ts  index.ts  index.tsx
src/contexts/: appContext.tsx  keybindsContext.tsx
src/functions/: deleteFile.ts  fileActions.ts  undo.ts
src/hooks/: index.ts  useApp.ts  useBridge.ts  useKeybinds.ts  useKeyboardShortcuts.ts  useScrollBlock.ts  useStoredKeybinds.ts  useUpdater.ts
src/interfaces/: index.ts
src/locales/: getIntlShape.ts  index.ts  messages.ts
src/modals/: ModalAbout.tsx  ModalAddKeybind.tsx  ModalBase.tsx  ModalConfirmation.tsx
src/pages/: Home.tsx  Settings.tsx  Test.tsx
src/store/: index.ts  useFileStack.ts  useFiles.ts  useJoyride.ts  useKeybinds.ts  useModal.ts  useSettings.ts
src/styles/: GlobalStyle.ts  styles.css
src/ui/: Button.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tooltip.tsx
src/utils/: changeHtmlTheme.ts  hookWebviewLog.ts  index.ts
webpack/: rules.webpack.js
(+18 files in other folders)
