[package]
name = "photo-organizer"
version = "1.1.0"
description = "Photo Organizer"
authors = ["lucas8x"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [ "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = { version = "2" }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.5.0"
tauri-plugin-process = "2.3.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"
